# senior-design

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt  compile.sh
code/gameobjects/include/: camera.h  chrus.h  node.h  node_types.h  primitive.h  scene.h  scenemanager.h  script.h  shader.h  sound.h  sprite.h  text.h
code/gameobjects/src/: camera.c  chrus.c  node.c  primitive.c  scene.c  scenemanager.c  script.c  sound.c  sprite.c  text.c
code/main/src/: main.c
code/pythonutils/: generate_ffi.py
code/scripting/src/: allegro_ffi.lua  allegrotest.lua  testcompile.sh  testmain.c
code/ui/: compile.sh
code/ui/include/: gui.h
code/ui/src/: gui.c  main.c
code/utils/include/: allocator.h  bitmap_converter.h  deserializer.h  drawing_thread.h  enums.h  font.h  globals.h  physics.h  rbtree.h  serializer.h  utils.h  vector.h
code/utils/src/: allocator.c  bitmap_converter.c  deserializer.c  drawing_thread.c  font.c  globals.c  pdjson.c  physics.c  rbtree.c  serializer.c  utils.c  vector.c
essays/: capstone-assessment.md  constraint-essay.md  fall-final-report.md  final-report.md  milestones.md  professional-biography.md  project-description.md  self-assessment.md  spring-final-report.md  task-list.md  team-contract.md  test-plan.md  user-manual.md  user-stories.md
src/: gui.c  gui.h  main.c  uniontest.c
